# kedro-2077

./: .gitignore  README.md  bot.py  pyproject.toml  query.py  requirements.txt
conf/base/: catalog.yml  parameters.yml  parameters_query_pipeline.yml
data/prompts/: query_prompt.txt
src/2077_langchain_test/: __main__.py
src/2077_langchain_test/pipelines/process_transcript/: nodes.py  pipeline.py
src/2077_langchain_test/pipelines/query_pipeline/: nodes.py  pipeline.py
src/kedro_2077/pipelines/process_transcript/: nodes.py  pipeline.py
src/kedro_2077/pipelines/query_discord/: __init__.py  nodes.py  pipeline.py
src/kedro_2077/pipelines/query_pipeline/: nodes.py  pipeline.py
tests/pipelines/process_transcript/: test_pipeline.py
tests/pipelines/query_discord/: test_pipeline.py
tests/pipelines/query_pipeline/: test_pipeline.py
