[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.9"
name = "2077_langchain_test"
readme = "README.md"
dynamic = [ "version",]
dependencies = [ "ipython>=8.10", "jupyterlab>=3.0", "notebook", "kedro~=1.0.0",]

[project.scripts]
2077-langchain-test = "2077_langchain_test.__main__:main"

[tool.kedro]
package_name = "2077_langchain_test"
project_name = "2077 LangChain Test"
kedro_init_version = "1.0.0"
tools = "['None']"
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.version]
attr = "2077_langchain_test.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false
